# ft_printf

./: CMakeLists.txt  Makefile  a.out  ft_itoa_base.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_strlen.c  ft_strrev.c  get_next_line.h.gch  libft.h.gch
ft_printf/: ft_printf.c  ft_printf.h  ft_printf_parser.c  main.c  paste_arg.c
ft_printf/Handlers/: flags_handler.c  flags_handler2.c  type_handlers_cper.c  type_handlers_oouuxxu.c  type_handlers_spdduiuu.c
ft_printf/UHandlers/: unicode_chars.c  utools.c  wchar_paste.c
